# task_tracker

./: .env.example  README.md  alembic.ini  pyproject.toml
migrations/: env.py
migrations/versions/: 2024_06_03_1851-ffd4158902ce_initial.py  2024_06_03_1952-037ce40d1e28_phone_number.py  2024_06_07_1715-dc1359df4260_updated_at_nullable.py  2024_06_11_1758-637d49a23aea_change_time_to_utc.py
src/: __init__.py  config.py  database.py  dependencies.py  main.py  schemas.py  service.py
src/auth/: auth.py  config.py  manager.py  models.py  schemas.py
src/employees/: dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
src/tasks/: dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
tests/: conftest.py  test_auth.py  test_employees.py  test_tasks.py
