[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = ""
authors = ["Mariya Kuznetsova <kuznetsova19.m@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.110.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
